[package]
name = "superdev_assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
solana-sdk = "2.3.1"
bs58 = "0.5.1"
spl-token = "8.0.0"
base64 = "0.22.1"
solana-system-interface = "1.0.0"
spl-associated-token-account = "7.0.0"
